methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:24: error: not found: value getBruhColor
      getBruhColor()
      ^